samples/_failures_safe/1761417631_36e930_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2d8ceb68.c: In function ‘main’:
./samples/SAFE/__tmp_2d8ceb68.c:198:5: error: expected identifier or ‘(’ at end of input
  198 |     for (int
      |     ^~~
./samples/SAFE/__tmp_2d8ceb68.c:198:5: error: expected declaration or statement at end of input
